# dl-from-scratch

./: CMakeCache.txt  LICENSE  README.md
src/: CMakeLists.txt  Doxyfile  Makefile
src/docs/html/: activations_8h_source.html  activations__gpu_8h_source.html  annotated.html  classActivation-members.html  classActivation.html  classCrossEntropyError-members.html  classCrossEntropyError.html  classCrossEntropyError__coll__graph.map  classCrossEntropyError__coll__graph.md5  classCrossEntropyError__inherit__graph.map  classCrossEntropyError__inherit__graph.md5  classDenseLayer-members.html  classDenseLayer.html  classDenseLayer__coll__graph.map  classDenseLayer__coll__graph.md5  classDenseLayer__inherit__graph.map  classDenseLayer__inherit__graph.md5  classInputLayer-members.html  classInputLayer.html  classInputLayer__coll__graph.map  classInputLayer__coll__graph.md5  classInputLayer__inherit__graph.map  classInputLayer__inherit__graph.md5  classLayer-members.html  classLayer.html  classLayer__coll__graph.map  classLayer__coll__graph.md5  classLayer__inherit__graph.map  classLayer__inherit__graph.md5  classLossLayer-members.html  classLossLayer.html  classLossLayer__coll__graph.map  classLossLayer__coll__graph.md5  classLossLayer__inherit__graph.map  classLossLayer__inherit__graph.md5  classMSE-members.html  classMSE.html  classMSE__coll__graph.map  classMSE__coll__graph.md5  classMSE__inherit__graph.map  (+100 more)
src/src/: main.cpp
src/src/gpu/: gpu.h
src/src/network/: activations.cpp  activations.h  activations_gpu.cu  activations_gpu.h  layers.cpp  layers.h  layers_gpu.cu  (+5 more)
(+43 files in other folders)
